--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ authors:
     description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
   thomas:
     name: Thomas Fantin
-    display_name: John    
+    display_name: Thomas    
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
