--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ authors:
     linkedin: https://www.linkedin.com/in/luca-pernice-815823268/
     description: "AI & Data Science student with a focus on large language models."
   andrea:
-    name: John
-    display_name: John    
+    name: Andrea Ottogalli
+    display_name: Andrea   
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
