--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ authors:
   luca:
     name: Luca Pernice
     display_name: Luca
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    gravatar: https://gravatar.com/lucadicequellochevuole
     email: luca.pernice@outlook.it
     linkedin: https://www.linkedin.com/in/luca-pernice-815823268/
     description: "AI & Data Science student with a focus on large language models."
