--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ authors:
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Bachelor degree in Materials Engineering at University of Trieste, attending a master degree in Materials Engineering and Nanotechnologies at Politecnico di Milano."
 
 # Plugins
 plugins:
