--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ authors:
   thomas:
     name: Thomas Fantin
     display_name: Thomas    
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/fotoblog.jpg'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
